refactor: simplify VGuide diagnostic state